[package]
name = "abstp"
version = "0.1.0"
authors = ["Willow Carlson-Huber <spaghetus@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0.2", features = ["macros", "rt-multi-thread"]}
clap = "2.33.3"
serde_json = "1.0.61"
regex = "1.5.4"
chrono = "*"